--- a/src/visualizers/resources/us/ihmc/pathPlanning/visibilityGraphs/ui/SimpleVisibilityGraphsUI.fxml
+++ b/src/visualizers/resources/us/ihmc/pathPlanning/visibilityGraphs/ui/SimpleVisibilityGraphsUI.fxml
@@ -16,6 +16,9 @@
           <Tab text="Start/Goal">
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+              <children>
+                 <fx:include fx:id="startGoalAnchorPane" source="StartGoalAnchorPane.fxml" />
+              </children>
             </content>
           </Tab>
           <Tab text="Untitled Tab 2">
