--- a/src/visualizers/resources/us/ihmc/pathPlanning/visibilityGraphs/ui/SimpleVisibilityGraphsUI.fxml
+++ b/src/visualizers/resources/us/ihmc/pathPlanning/visibilityGraphs/ui/SimpleVisibilityGraphsUI.fxml
@@ -5,7 +5,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 
-
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <fx:include fx:id="simpleUIMenu" source="SimpleUIMenu.fxml" />
@@ -21,9 +20,12 @@
               </children>
             </content>
           </Tab>
-          <Tab text="Untitled Tab 2">
+          <Tab text="VizGraphs">
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+              <children>
+                 <fx:include fx:id="visibilityGraphsAnchorPane" source="VisibilityGraphsAnchorPane.fxml" />
+              </children>
             </content>
           </Tab>
         </tabs>
