--- a/src/visualizers/resources/us/ihmc/pathPlanning/visibilityGraphs/ui/VisibilityGraphsAnchorPane.fxml
+++ b/src/visualizers/resources/us/ihmc/pathPlanning/visibilityGraphs/ui/VisibilityGraphsAnchorPane.fxml
@@ -3,11 +3,30 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="152.0" prefWidth="713.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="us.ihmc.pathPlanning.visibilityGraphs.ui.VisibilityGraphsAnchorPaneController">
    <children>
-      <Button fx:id="computePathButton" layoutX="23.0" layoutY="24.0" mnemonicParsing="false" onAction="#computePath" text="Compute path" />
-      <ToggleButton fx:id="showLocalGraphsToggleButton" layoutX="25.0" layoutY="64.0" mnemonicParsing="false" selected="true" text="Show local graphs" />
-      <ToggleButton fx:id="showBodyPathToggleButton" layoutX="25.0" layoutY="100.0" mnemonicParsing="false" selected="true" text="Show body path" />
+      <GridPane layoutX="23.0" layoutY="24.0">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+         </rowConstraints>
+         <children>
+            <Button fx:id="computePathButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#computePath" text="Compute path" />
+            <ToggleButton fx:id="showLocalGraphsToggleButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" selected="true" text="Show local graphs" GridPane.rowIndex="1" />
+            <ToggleButton fx:id="showBodyPathToggleButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" selected="true" text="Show body path" GridPane.rowIndex="2" />
+            <ToggleButton fx:id="showInterConnectionsToggleButton" mnemonicParsing="false" selected="true" text="Show inter-connections" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <ToggleButton fx:id="showPlanarRegionsToggleButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" selected="true" text="Show planar regions" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+         </children>
+      </GridPane>
    </children>
 </AnchorPane>
