--- a/src/visualizers/resources/us/ihmc/pathPlanning/visibilityGraphs/ui/SimpleUIMenu.fxml
+++ b/src/visualizers/resources/us/ihmc/pathPlanning/visibilityGraphs/ui/SimpleUIMenu.fxml
@@ -4,11 +4,12 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 
-<MenuBar xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.141" fx:controller="us.ihmc.pathPlanning.visibilityGraphs.ui.SimpleUIMenuController">
+<MenuBar xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="us.ihmc.pathPlanning.visibilityGraphs.ui.SimpleUIMenuController">
   <menus>
     <Menu mnemonicParsing="false" text="File">
       <items>
             <MenuItem mnemonicParsing="false" onAction="#loadPlanarRegion" text="Load..." />
+            <MenuItem fx:id="reloadMenuItem" mnemonicParsing="false" onAction="#reloadPlanarRegion" text="Reload" />
         <MenuItem mnemonicParsing="false" text="Close" />
       </items>
     </Menu>
