Added tab to tune the parameters.

--- a/src/visualizers/resources/us/ihmc/pathPlanning/visibilityGraphs/ui/SimpleVisibilityGraphsUI.fxml
+++ b/src/visualizers/resources/us/ihmc/pathPlanning/visibilityGraphs/ui/SimpleVisibilityGraphsUI.fxml
@@ -28,6 +28,14 @@
               </children>
             </content>
           </Tab>
+          <Tab text="Parameters">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+              <children>
+                 <fx:include fx:id="visibilityGraphsParametersAnchorPane" source="VisibilityGraphsParametersAnchorPane.fxml" />
+              </children>
+            </content>
+          </Tab>
           <Tab text="Unit Test Exporter">
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
