--- a/src/visualizers/resources/us/ihmc/pathPlanning/visibilityGraphs/ui/VisibilityGraphsParametersAnchorPane.fxml
+++ b/src/visualizers/resources/us/ihmc/pathPlanning/visibilityGraphs/ui/VisibilityGraphsParametersAnchorPane.fxml
@@ -10,12 +10,14 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="254.0" prefWidth="909.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="us.ihmc.pathPlanning.visibilityGraphs.ui.VisibilityGraphsParametersAnchorPaneController">
    <children>
-      <GridPane hgap="5.0" layoutX="12.0" layoutY="15.0" prefHeight="205.0" prefWidth="555.0">
+      <GridPane hgap="5.0" layoutX="10.0" layoutY="26.0" prefHeight="164.0" prefWidth="889.0">
          <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="134.0" minWidth="10.0" prefWidth="134.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="211.0" minWidth="10.0" prefWidth="147.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="125.0" minWidth="0.0" prefWidth="106.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="309.0" minWidth="10.0" prefWidth="203.0" />
          </columnConstraints>
          <rowConstraints>
             <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
@@ -27,7 +29,7 @@
             <Label maxWidth="1.7976931348623157E308" prefHeight="38.0" prefWidth="99.0" text="Number of forced connections" wrapText="true" />
             <Slider fx:id="numberOfForcedConnectionsSlider" majorTickUnit="5.0" max="20.0" minorTickCount="4" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="5.0" GridPane.columnIndex="1" />
             <Label maxWidth="1.7976931348623157E308" prefHeight="53.0" prefWidth="112.0" text="Min connection distance for regions (mm)" wrapText="true" GridPane.rowIndex="1" />
-            <Slider fx:id="minConnectionDistanceForRegionsSlider" blockIncrement="0.005" majorTickUnit="0.005" max="0.02" minorTickCount="4" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="0.01" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Slider fx:id="minConnectionDistanceForRegionsSlider" blockIncrement="0.005" majorTickUnit="0.005" max="0.02" minorTickCount="4" prefHeight="38.0" prefWidth="77.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="0.01" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <Label maxWidth="1.7976931348623157E308" prefHeight="53.0" prefWidth="112.0" text="Normal z-value for accessible regions" wrapText="true" GridPane.rowIndex="2" />
             <Label maxWidth="1.7976931348623157E308" prefHeight="53.0" prefWidth="112.0" text="Normal z-value for obstacle regions" wrapText="true" GridPane.rowIndex="3" />
             <Label maxWidth="1.7976931348623157E308" prefHeight="53.0" prefWidth="112.0" text="Extrusion distance" wrapText="true" GridPane.columnIndex="2" />
@@ -40,6 +42,12 @@
             <Slider fx:id="extrusionDistanceIfNotTooHighToStepSlider" majorTickUnit="0.5" max="2.0" minorTickCount="4" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="0.25" GridPane.columnIndex="3" GridPane.rowIndex="1" />
             <Slider fx:id="tooHighToStepDistanceSlider" majorTickUnit="0.2" max="1.0" minorTickCount="4" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="0.5" GridPane.columnIndex="3" GridPane.rowIndex="2" />
             <Slider fx:id="clusterResolutionSlider" majorTickUnit="0.2" max="1.0" minorTickCount="4" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="0.5" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+            <Label maxWidth="1.7976931348623157E308" prefHeight="53.0" prefWidth="112.0" text="Exploration distance from start-goal" wrapText="true" GridPane.columnIndex="4" />
+            <Label maxWidth="1.7976931348623157E308" prefHeight="53.0" prefWidth="112.0" text="Planar region min area" wrapText="true" GridPane.columnIndex="4" GridPane.rowIndex="1" />
+            <Label maxWidth="1.7976931348623157E308" prefHeight="53.0" prefWidth="112.0" text="Planar region min size" wrapText="true" GridPane.columnIndex="4" GridPane.rowIndex="2" />
+            <Slider fx:id="planarRegionMinSizeSlider" majorTickUnit="10.0" minorTickCount="4" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="2.0" GridPane.columnIndex="5" GridPane.rowIndex="2" />
+            <Slider fx:id="planarRegionMinAreaSlider" majorTickUnit="0.1" max="1.0" minorTickCount="4" showTickLabels="true" showTickMarks="true" snapToTicks="true" GridPane.columnIndex="5" GridPane.rowIndex="1" />
+            <Slider fx:id="explorationDistanceFromStartGoalSlider" majorTickUnit="1.0" max="10.0" minorTickCount="4" showTickLabels="true" showTickMarks="true" snapToTicks="true" GridPane.columnIndex="5" />
          </children>
       </GridPane>
    </children>
