--- a/src/visualizers/resources/us/ihmc/pathPlanning/visibilityGraphs/ui/StartGoalAnchorPane.fxml
+++ b/src/visualizers/resources/us/ihmc/pathPlanning/visibilityGraphs/ui/StartGoalAnchorPane.fxml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
-
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="148.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="us.ihmc.pathPlanning.visibilityGraphs.ui.StartGoalAnchorPaneController">
    <children>
@@ -17,7 +16,9 @@
             <ColumnConstraints hgrow="SOMETIMES" minWidth="6.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="6.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="6.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="6.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="6.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
          </columnConstraints>
@@ -26,20 +27,20 @@
             <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <TextField fx:id="startXTextField" prefHeight="25.0" prefWidth="88.0" GridPane.columnIndex="2" />
             <Label text="x" GridPane.columnIndex="1" />
-            <TextField fx:id="goalXTextField" prefHeight="25.0" prefWidth="88.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
             <Label text="x" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField fx:id="startYTextField" prefHeight="25.0" prefWidth="88.0" GridPane.columnIndex="4" />
             <Label text="y" GridPane.columnIndex="3" />
-            <TextField fx:id="goalYTextField" prefHeight="25.0" prefWidth="88.0" GridPane.columnIndex="4" GridPane.rowIndex="1" />
             <Label text="y" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-            <TextField fx:id="startZTextField" prefHeight="25.0" prefWidth="88.0" GridPane.columnIndex="6" />
-            <Label text="z" GridPane.columnIndex="5" />
-            <TextField fx:id="goalZTextField" prefHeight="25.0" prefWidth="88.0" GridPane.columnIndex="6" GridPane.rowIndex="1" />
-            <Label text="z" GridPane.columnIndex="5" GridPane.rowIndex="1" />
+            <Label text="z" GridPane.columnIndex="6" />
+            <Label text="z" GridPane.columnIndex="6" GridPane.rowIndex="1" />
             <ToggleButton fx:id="placeStartToggleButton" mnemonicParsing="false" text="Place Start" />
             <ToggleButton fx:id="placeGoalToggleButton" mnemonicParsing="false" text="Place Goal" GridPane.rowIndex="1" />
+            <Spinner fx:id="startXSpinner" GridPane.columnIndex="2" />
+            <Spinner fx:id="goalYSpinner" GridPane.columnIndex="4" GridPane.rowIndex="1" />
+            <Spinner fx:id="goalXSpinner" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+            <Spinner fx:id="startZSpinner" GridPane.columnIndex="7" />
+            <Spinner fx:id="goalZSpinner" GridPane.columnIndex="7" GridPane.rowIndex="1" />
+            <Spinner fx:id="startYSpinner" GridPane.columnIndex="4" />
          </children>
       </GridPane>
    </children>
