--- a/src/visualizers/resources/us/ihmc/pathPlanning/visibilityGraphs/ui/StartGoalAnchorPane.fxml
+++ b/src/visualizers/resources/us/ihmc/pathPlanning/visibilityGraphs/ui/StartGoalAnchorPane.fxml
@@ -35,12 +35,12 @@
             <Label text="z" GridPane.columnIndex="6" GridPane.rowIndex="1" />
             <ToggleButton fx:id="placeStartToggleButton" mnemonicParsing="false" text="Place Start" />
             <ToggleButton fx:id="placeGoalToggleButton" mnemonicParsing="false" text="Place Goal" GridPane.rowIndex="1" />
-            <Spinner fx:id="startXSpinner" GridPane.columnIndex="2" />
-            <Spinner fx:id="goalYSpinner" GridPane.columnIndex="4" GridPane.rowIndex="1" />
-            <Spinner fx:id="goalXSpinner" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-            <Spinner fx:id="startZSpinner" GridPane.columnIndex="7" />
-            <Spinner fx:id="goalZSpinner" GridPane.columnIndex="7" GridPane.rowIndex="1" />
-            <Spinner fx:id="startYSpinner" GridPane.columnIndex="4" />
+            <Spinner fx:id="startXSpinner" editable="true" GridPane.columnIndex="2" />
+            <Spinner fx:id="goalYSpinner" editable="true" GridPane.columnIndex="4" GridPane.rowIndex="1" />
+            <Spinner fx:id="goalXSpinner" editable="true" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+            <Spinner fx:id="startZSpinner" editable="true" GridPane.columnIndex="7" />
+            <Spinner fx:id="goalZSpinner" editable="true" GridPane.columnIndex="7" GridPane.rowIndex="1" />
+            <Spinner fx:id="startYSpinner" editable="true" GridPane.columnIndex="4" />
          </children>
       </GridPane>
    </children>
