--- a/src/visualizers/resources/us/ihmc/pathPlanning/visibilityGraphs/ui/VisibilityGraphsParametersAnchorPane.fxml
+++ b/src/visualizers/resources/us/ihmc/pathPlanning/visibilityGraphs/ui/VisibilityGraphsParametersAnchorPane.fxml
@@ -7,16 +7,16 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="254.0" prefWidth="909.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="us.ihmc.pathPlanning.visibilityGraphs.ui.VisibilityGraphsParametersAnchorPaneController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="244.0" prefWidth="1741.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="us.ihmc.pathPlanning.visibilityGraphs.ui.VisibilityGraphsParametersAnchorPaneController">
    <children>
-      <GridPane hgap="5.0" layoutX="10.0" layoutY="26.0" prefHeight="164.0" prefWidth="889.0">
+      <GridPane hgap="5.0" layoutX="17.0" layoutY="5.0" prefHeight="141.0" prefWidth="1596.0">
          <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="134.0" minWidth="10.0" prefWidth="134.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="211.0" minWidth="10.0" prefWidth="147.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="125.0" minWidth="0.0" prefWidth="106.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="309.0" minWidth="10.0" prefWidth="203.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="352.0" minWidth="10.0" prefWidth="290.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="279.0" minWidth="10.0" prefWidth="229.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="354.0" minWidth="10.0" prefWidth="249.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="389.0" minWidth="10.0" prefWidth="212.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="397.0" minWidth="0.0" prefWidth="239.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="309.0" minWidth="10.0" prefWidth="169.0" />
          </columnConstraints>
          <rowConstraints>
             <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
@@ -41,12 +41,12 @@
             <Slider fx:id="extrusionDistanceIfNotTooHighToStepSlider" majorTickUnit="0.5" max="2.0" minorTickCount="4" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="0.25" GridPane.columnIndex="3" GridPane.rowIndex="1" />
             <Slider fx:id="tooHighToStepDistanceSlider" majorTickUnit="0.2" max="1.0" minorTickCount="4" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="0.5" GridPane.columnIndex="3" GridPane.rowIndex="2" />
             <Slider fx:id="clusterResolutionSlider" majorTickUnit="0.2" max="1.0" minorTickCount="4" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="0.5" GridPane.columnIndex="3" GridPane.rowIndex="3" />
-            <Label maxWidth="1.7976931348623157E308" prefHeight="53.0" prefWidth="112.0" text="Exploration distance from start-goal" wrapText="true" GridPane.columnIndex="4" />
+            <Label maxWidth="1.7976931348623157E308" prefHeight="41.0" prefWidth="140.0" text="Exploration distance from start-goal" wrapText="true" GridPane.columnIndex="4" />
             <Label maxWidth="1.7976931348623157E308" prefHeight="53.0" prefWidth="112.0" text="Planar region min area" wrapText="true" GridPane.columnIndex="4" GridPane.rowIndex="1" />
             <Label maxWidth="1.7976931348623157E308" prefHeight="53.0" prefWidth="112.0" text="Planar region min size" wrapText="true" GridPane.columnIndex="4" GridPane.rowIndex="2" />
-            <Slider fx:id="planarRegionMinSizeSlider" blockIncrement="1.0" majorTickUnit="5.0" max="20.0" minorTickCount="4" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="2.0" GridPane.columnIndex="5" GridPane.rowIndex="2" />
+            <Slider fx:id="planarRegionMinSizeSlider" blockIncrement="1.0" majorTickUnit="5.0" max="20.0" minorTickCount="4" prefHeight="45.0" prefWidth="146.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="2.0" GridPane.columnIndex="5" GridPane.rowIndex="2" />
             <Slider fx:id="planarRegionMinAreaSlider" blockIncrement="0.01" majorTickUnit="0.1" max="0.5" minorTickCount="5" showTickLabels="true" showTickMarks="true" snapToTicks="true" GridPane.columnIndex="5" GridPane.rowIndex="1" />
-            <Slider fx:id="explorationDistanceFromStartGoalSlider" majorTickUnit="1.0" max="10.0" minorTickCount="4" showTickLabels="true" showTickMarks="true" snapToTicks="true" GridPane.columnIndex="5" />
+            <Slider fx:id="explorationDistanceFromStartGoalSlider" majorTickUnit="1.0" max="10.0" minorTickCount="4" prefHeight="45.0" prefWidth="215.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" GridPane.columnIndex="5" />
          </children>
       </GridPane>
    </children>
